docs/pages/versions/v50.0.0/sdk/sqlite.mdx
---
title: SQLite
description: A library that provides access to a database that can be queried through a WebSQL-like API.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-50/packages/expo-sqlite'
packageName: 'expo-sqlite'
iconUrl: '/static/images/packages/expo-sqlite.png'
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import PlatformsSection from '~/components/plugins/PlatformsSection';
import { Terminal } from '~/ui/components/Snippet';
import { Step } from '~/ui/components/Step';
import { BoxLink } from '~/ui/components/BoxLink';
import { GithubIcon } from '@expo/styleguide-icons';

`expo-sqlite` gives your app access to a database that can be queried through a [WebSQL](https://www.w3.org/TR/webdatabase/)-like API. The database is persisted across restarts of your app.

<PlatformsSection android emulator ios simulator />

## Installation

<APIInstallSection />

## Usage

<BoxLink
  title="To-do list app"
  description="An example to-do list app is available that uses this module for storage."
  href="https://github.com/expo/examples/tree/master/with-sqlite"
  Icon={GithubIcon}
/>

### Importing an existing database

To open a new SQLite database using an existing `.db` file you already have, follow the steps below:

<Step label="1">
Install `expo-file-system` and `expo-asset` modules:

<Terminal cmd={['$ npx expo install expo-file-system expo-asset']} />

</Step>

<Step label="2">
Create a **metro.config.js** file at the root of your project with the following contents to include [extra asset extensions](/guides/customizing-metro/#adding-more-file-extensions-to--assetexts):

```js
const { getDefaultConfig } = require('expo/metro-config');

const defaultConfig = getDefaultConfig(__dirname);

defaultConfig.resolver.assetExts.push('db');

module.exports = defaultConfig;
```

</Step>

<Step label="3">

Use the following function (or similar) to open your database:

```ts
import * as FileSystem from 'expo-file-system';
import * as SQLite from 'expo-sqlite';
import { Asset } from 'expo-asset';

async function openDatabase(pathToDatabaseFile: string): Promise<SQLite.WebSQLDatabase> {
  if (!(await FileSystem.getInfoAsync(FileSystem.documentDirectory + 'SQLite')).exists) {
    await FileSystem.makeDirectoryAsync(FileSystem.documentDirectory + 'SQLite');
  }
  const localDbPath = FileSystem.documentDirectory + 'SQLite/myDatabaseName.db';
  const asset = Asset.fromModule(require(pathToDatabaseFile));
  if (asset.localUri) {
    await FileSystem.copyAsync({ from: asset.localUri, to: localDbPath });
  } else {
    await FileSystem.downloadAsync(asset.uri, localDbPath);
  }
  return SQLite.openDatabase('myDatabaseName.db');
}
```

</Step>

### Executing statements with an async transaction

```js
import * as SQLite from 'expo-sqlite';

const db = SQLite.openDatabase('dbName', version);

const readOnly = true;
await db.transactionAsync(async tx => {
  const result = await tx.executeSqlAsync('SELECT COUNT(*) FROM USERS', []);
  console.log('Count:', result.rows[0]['COUNT(*)']);
}, readOnly);
```

### Executing statements outside of a transaction

> You should use this kind of execution only when it is necessary. For instance, when code is a no-op within transactions. Example: `PRAGMA foreign_keys = ON;`.

```js
import * as SQLite from 'expo-sqlite';

const db = SQLite.openDatabase('dbName', version);

await db.execAsync([{ sql: 'PRAGMA foreign_keys = ON;', args: [] }], false);
console.log('Foreign keys turned on');
```

## API

```js
import * as SQLite from 'expo-sqlite';
```

<APISection packageName="expo-sqlite" apiName="SQLite" />
